concord_macros/tests/trybuild/fail/parser/route/base_url_rejects_backslash.stderr
error: base URL must contain only scheme and host
 --> tests/trybuild/fail/parser/route/base_url_rejects_backslash.rs:5:14
  |
5 |         base "https://example.com\\evil"
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: base URL must start with `https://` or `http://`
  --> tests/trybuild/fail/parser/route/base_url_rejects_backslash.rs:11:14
   |
11 |         base "https:\\\\example.com"
   |              ^^^^^^^^^^^^^^^^^^^^^^^
